fix spacing for unauth users

--- a/ui/scss/component/_header.scss
+++ b/ui/scss/component/_header.scss
@@ -174,6 +174,7 @@
   display: flex;
   align-items: center;
   font-weight: var(--font-weight-bold);
+  margin-left: var(--spacing-s);
 
   & > *:not(:last-child) {
     margin: 0 var(--spacing-m);
